syntax = "proto3";
package kvserverpb;

import "gogoproto/gogo.proto";

// for grpc-gateway
import "google/api/annotations.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

service KV {
    rpc Put(PutRequest) returns (PutResponse) {
        option (google.api.http) = {
            post: "/put"
            body: "*"
        };
    }

    rpc Get(GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            post: "/get"
            body: "*"
        };
    }

    rpc Del(DelRequest) returns (DelResponse) {
        option (google.api.http) = {
            post: "/del"
            body: "*"
        };
    }
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse {
    bytes value = 1;
}

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    bytes value = 1;
    int64 count = 2;
}

message DelRequest {
    bytes key = 1;
}

message DelResponse {
    bytes value = 1;
    int64 count = 2;
}
